fix alignment of messages

--- a/client/style.css
+++ b/client/style.css
@@ -377,6 +377,7 @@ textarea {
 
 .message {
   padding-bottom: 1rem;
+  text-align: right;
 }
 
 .message__body {
@@ -392,7 +393,10 @@ textarea {
   color: var(--colors-tertiary--500);
   font-size: 0.85rem;
   margin-top: 0.25rem;
-  text-align: right;
+}
+
+.message-ai {
+  text-align: left;
 }
 
 .message-ai .message__body {
@@ -402,7 +406,6 @@ textarea {
 
 .message-ai .message__footer {
   color: var(--colors-active--500);
-  text-align: left;
 }
 
 /* @component: button */
@@ -569,4 +572,68 @@ textarea {
 .segment-topbar__aside {
   align-self: flex-start;
   box-shadow: -6px -4px 24px rgba(156, 50, 48, 0.4);
+}
+
+/* LOADING ANIMATION TESTING */
+.loading::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  content: '';
+  display: block;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 2;
+  margin-top: 4px;
+  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  border: none;
+  -webkit-animation-delay: 0.15s;
+  animation-delay: 0.15s;
+}
+.loading span {
+  display: block;
+  font-size: 0;
+  width: 20px;
+  height: 10px;
+  position: relative;
+}
+.loading span::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  content: '';
+  display: block;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 2;
+  margin-top: 4px;
+  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  margin-left: -7px;
+}
+.loading span::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  content: '';
+  display: block;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 2;
+  margin-top: 4px;
+  -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  margin-left: 7px;
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
 }
